k8s/account-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: accounts-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: accountservice
    template:
        metadata:
            labels:
                app: accountservice
        spec:
            containers:
                - name: accountservice
                  image: rdani2005/accountservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: account-clousterip-srv
spec:
    type: ClusterIP
    selector:
        app: accountservice
    ports:
        - name: accountservice
          protocol: TCP
          port: 80
          targetPort: 80
        - name: platformgrpc
          protocol: TCP
          port: 666
          targetPort: 666
