k8s/movements-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: movement-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: movementservice
    template:
        metadata:
            labels:
                app: movementservice
        spec:
            containers:
                - name: movementservice
                  image: rdani2005/movementservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: movement-clousterip-srv
spec:
    type: ClusterIP
    selector:
        app: authservice
    ports:
        - name: movementservice
          protocol: TCP
          port: 80
          targetPort: 80
        - name: movementgrpc
          protocol: TCP
          port: 666
          targetPort: 666
