k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: rdani2005.com
          http:
              paths:
                  - path: /api/v1/auth
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-clousterip-srv
                            port:
                                number: 80
                  - path: /api/v1/accounts
                    pathType: Prefix
                    backend:
                        service:
                            name: account-clousterip-srv
                            port:
                                number: 80
